2006-06-10  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* docs/Mafefile.in (CORETERM): Add wxt.trm in the list of
	terminals.

	* src/wxterminal/wxt_gui.cpp:
	* src/wxterminal/wxt_gui.h:
	Fix compilation with --disable-with-image.

2006-06-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c src/eval.h src/internal.c src/internal.h src/parse.c
	src/standard.c src/standard.h docs/gnuplot.doc NEWS:

	Deprecate built-in pseudo-function  `if defined(foo)`
	Replace it with string function exists("foo")
	The previous version (defined) tried to bypass normal expression
	parsing, but succeeded only for the simplest cases. This variant,
	although deprecated, is still supported by BACKWARDS_COMPATIBLE.
	The new version handles the full general case by using string variables.
	Bugfix: #1497957

	* src/color.c (make_palette): Revert optimization (18 Mar 2006) that
	only sent palette information for a plot if it had changed since the 
	previous plot.  This doesn't work for PostScript output, because the
	pages may be viewed out of order.  Bugfix.

2006-06-08  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.h:
	* src/wxterminal/wxt_plot.h:
	* src/wxterminal/wxt_term.h:
	Remove "extern" for functions.

2006-06-07  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in (--with-wx-config=PATH): Fix wrong variable name.

	* src/term.c (init_terminal) [WXWIDGETS]: Take DEFAULTTERM into account.

	* src/wxterminal/bitmaps/xpm/cross.xpm:
	* src/wxterminal/bitmaps/xpm/right.xpm:
	* src/wxterminal/bitmaps/xpm/rotate.xpm:
	* src/wxterminal/bitmaps/xpm/size.xpm:
	Write the hotspot coordinates directly in the cursor files.

	* src/wxterminal/wxt_gui.h (wxtApp::LoadCursor):
	* src/wxterminal/wxt_gui.cpp (wxtApp::LoadCursor):
	Remove hotpost arguments, take hotspot coordinates from the XPM files.
	(wxtApp::OnInit): Update calls to LoadCursor.

	* src/wxterminal/gp_cairo.h (current_xmax): Rename to the more
	meaningful device_xmax.